--- a/src/containers/Patient/Doctor/ProfileDoctor.scss
+++ b/src/containers/Patient/Doctor/ProfileDoctor.scss
@@ -3,9 +3,11 @@
         display: flex;
 
         .content-left {
-            background: center center no-repeat;
-            width: 120px;
-            height: 120px;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 80px;
+            height: 80px;
             border-radius: 50%;
         }
 
