--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -136,7 +136,7 @@
         cursor: pointer;
 
         .customize-border {
-            border: 1px solid orange;
+            border: 1px solid #ddd;
             padding: 20px;
         }
     }
