--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -6,8 +6,11 @@
         margin: 0 100px;
 
         .content-left {
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
             width: 20%;
-            background: center center no-repeat;
+            // background: center center no-repeat;
             width: 120px;
             height: 120px;
             border-radius: 50%;
