--- a/src/containers/Patient/Specialty/DetailSpecialty.scss
+++ b/src/containers/Patient/Specialty/DetailSpecialty.scss
@@ -1,12 +1,33 @@
 .detail-specialty-container {
     .description-specialty {
-        border: 1px solid red;
+        padding: 10px;
+        background-color: white !important;
+        margin: 15px 0;
+
+        h1,
+        h2,
+        h3 {
+            font-size: 16px;
+            font-weight: 600;
+        }
     }
 
-    .search-sp-doctor {}
+    .search-sp-doctor {
+        select {
+            height: 30px;
+            padding: 5px 8px;
+            border: none;
+            outline: none;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+    }
 
     .detail-specialty-body {
-        margin: 0 100px;
+        padding: 0 100px;
+        background: #eee;
+        display: flex;
+        flex-direction: column;
     }
 
     .each-doctor {
@@ -22,6 +43,12 @@
         .dt-content-left {
             width: 50%;
             border-right: 1px solid #ddd;
+
+            .profile-doctor-container {
+                .down {
+                    padding: 5px;
+                }
+            }
         }
 
         .dt-content-right {
